# Test_tech_task

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cl_parser.cpp  cl_parser.h  config.h  crc8.cpp  crc8.h  file_handler.cpp  file_handler.h  file_reader.cpp  file_reader.h  hasher.cpp  hasher.h  main.cpp  thread_handler.cpp  thread_handler.h  timer.hpp
